--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.24MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.26MB/s(Youtube:不良林), server: 212.81.47.16, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.59MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: mDmaAWoWXB, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.43MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-533.8KB/s(Youtube:不良林), server: 43.132.153.167, port: 23873, type: vmess, uuid: 143e2134-ca7d-46ff-e902-37d0967b9907, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-341.2KB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇺🇸 美国-822.7KB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.20MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.53MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-666.6KB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.38MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.01MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.36MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.13MB/s(Youtube:不良林), server: gycd1.csccdd.xyz, port: 52340, type: vmess, uuid: 1dc13504-e4ba-3c49-8e0b-6a3eb4e40335, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: gycd1.csccdd.xyz}}
+  - {name: 🇫🇷 法国-710.6KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-533.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-341.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-822.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-666.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-710.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-533.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-341.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-822.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-666.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-710.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-533.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-341.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-822.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-666.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-710.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-533.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-533.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-341.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-822.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-666.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-710.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-533.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-341.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-822.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-666.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-710.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-533.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-341.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-822.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-666.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-710.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇭🇰 香港-533.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-341.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-822.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-666.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
+      - 🇫🇷 法国-710.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
