--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-341.2KB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-822.7KB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-2.53MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-666.6KB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.38MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.01MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.36MB/s(Youtube:不良林), server: 120.233.186.71, port: 3381, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.13MB/s(Youtube:不良林), server: gycd1.csccdd.xyz, port: 52340, type: vmess, uuid: 1dc13504-e4ba-3c49-8e0b-6a3eb4e40335, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: gycd1.csccdd.xyz}}
-  - {name: 🇫🇷 法国-710.6KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-410.7KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-644.5KB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-223.9KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
+  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 212.81.47.14, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.59MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-347.1KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-5.83MB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇺🇸 美国-431.0KB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-898.0KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-341.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-666.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-710.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-644.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-431.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-898.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-341.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-666.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-710.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-644.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-431.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-898.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-341.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-666.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-710.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-644.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-431.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-898.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-341.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-666.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-710.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-644.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-431.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-898.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-341.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-666.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-710.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-644.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-431.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-898.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-341.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-666.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-710.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-644.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-431.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-898.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-341.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-822.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-666.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.13MB/s(Youtube:不良林)
-      - 🇫🇷 法国-710.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-410.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-644.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-223.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-347.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-431.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-898.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
