--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,80 +5,80 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-394.5KB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-217.7KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇭🇰 香港-354.0KB/s(Youtube:不良林), server: 46.3.240.10, port: 443, type: vmess, uuid: a9f93c36-6b1f-4f68-c067-aa1cff941f97, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: biliroam, ws-headers: {Host: 46.3.240.10}}
-  - {name: 🇩🇪 德国-273.2KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-338.9KB/s(Youtube:不良林), server: 13.250.126.43, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇺🇸 美国-303.1KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.22MB/s(Youtube:不良林), server: 43.132.153.167, port: 23873, type: vmess, uuid: 143e2134-ca7d-46ff-e902-37d0967b9907, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-235.3KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-858.1KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-277.2KB/s(Youtube:不良林), server: gcfree2.galaxy-cloud.icu, port: 443, type: vmess, uuid: 8425f0fd-8cf9-42f3-a241-3fd44c591c8b, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /tDZcCqc, ws-headers: {Host: gcfree2.galaxy-cloud.icu}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-394.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-354.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-273.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-338.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.22MB/s(Youtube:不良林)
+      - 🇩🇪 德国-235.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-858.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-277.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-394.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-354.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-273.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-338.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.22MB/s(Youtube:不良林)
+      - 🇩🇪 德国-235.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-858.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-277.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-394.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-354.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-273.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-338.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.22MB/s(Youtube:不良林)
+      - 🇩🇪 德国-235.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-858.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-277.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-354.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.22MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-394.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-354.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-273.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-338.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.22MB/s(Youtube:不良林)
+      - 🇩🇪 德国-235.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-858.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-277.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-394.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-354.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-273.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-338.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.22MB/s(Youtube:不良林)
+      - 🇩🇪 德国-235.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-858.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-277.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-394.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-354.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-273.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-338.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.22MB/s(Youtube:不良林)
+      - 🇩🇪 德国-235.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-858.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-277.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-394.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-354.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-273.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-338.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-303.1KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.22MB/s(Youtube:不良林)
+      - 🇩🇪 德国-235.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-858.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-277.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
