--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-858.1KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-277.2KB/s(Youtube:不良林), server: gcfree2.galaxy-cloud.icu, port: 443, type: vmess, uuid: 8425f0fd-8cf9-42f3-a241-3fd44c591c8b, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /tDZcCqc, ws-headers: {Host: gcfree2.galaxy-cloud.icu}}
   - {name: 🇺🇸 美国-937.8KB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇨🇳 中国-201.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
   - {name: 🇸🇬 新加坡-406.8KB/s(Youtube:不良林), server: 13.250.126.43, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇩🇪 德国-235.8KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.65MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-858.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-277.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-937.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-406.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-235.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-858.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-277.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-937.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-406.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-235.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-858.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-277.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-937.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-406.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-235.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-858.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-277.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-937.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-406.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-235.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-858.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-277.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-937.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-406.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-235.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-858.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-277.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-937.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-406.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-235.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-858.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-277.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-937.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.5KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-406.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-235.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
