--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,43 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-272.6KB/s(Youtube:不良林), server: 13.250.126.43, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇩🇪 德国-235.8KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
   - {name: 🇯🇵 日本-2.65MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-296.2KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇦🇺 澳大利亚-487.6KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-343.9KB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.24MB/s(Youtube:不良林), server: 120.241.236.93, port: 34955, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-272.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-235.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-296.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-487.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-272.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-235.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-296.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-487.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-272.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-235.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-296.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-487.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -52,32 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-272.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-235.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-296.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-487.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-272.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-235.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-296.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-487.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-272.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-235.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-296.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-487.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-272.6KB/s(Youtube:不良林)
-      - 🇩🇪 德国-235.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-296.2KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-487.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-343.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.24MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
